servico02/terraform-container/main.tf
provider "aws" {
  region = "us-east-1"
}

resource "aws_security_group" "example" {
  name_prefix = "example"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "example" {
  ami           = "ami-006dcf34c09e50022"
  instance_type = "t3.micro"
  vpc_security_group_ids = [
    aws_security_group.example.id,
  ]
  user_data = file("user_data.sh")
}

output "public_ip" {
  value = aws_instance.example.public_ip
}
